# Scouting-Backend

./: .gitignore  GameData.hs  GameLoader.hs  HSB.cabal  Index.hs  LICENSE  Main.hs  Match.hs  Parser.hs  README.md  Team.hs  TeamData.hs  TeamLoader.hs  Website.hs
matches/: 1.txt  2.txt  3.txt
samples/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  rmnewline.py
site/: 1.html  2.html  3.html  auto.html  climb.html  index.html  main.html  screen.css
site/matches/: 1.html  2.html  3.html
src/: #Parser.hs#  .#Parser.hs  GameData.hs  Index.hs  Main.hs  Parser.hs  Website.hs
src/Website/: Index.hs  Match.hs  Team.hs  Template.hs  screen.css
teams/: 1.txt  10.txt  2.txt  3.txt  4.txt  6.txt  7.txt  8.txt  9.txt
