name:                HSB
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable HSB
  main-is:             Main.hs
  build-depends:       base ==4.6.*, MissingH ==1.2.*, directory ==1.2.*, filepath ==1.3.*, safe ==0.3.*, blaze-html ==0.6.*, blaze-markup ==0.5.*
  hs-source-dirs:      src